@@ -1,0 +1,121 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Fibaro : Button FGPB101 -->
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+	<!-- Configuration -->
+	<CommandClass id="112">
+		<Value type="byte" genre="config" instance="1" index="1" label="Scenes sent to the controller" min="0" max="127" value="127">
+			<Help>
+			This parameter determines which actions result in sending scene IDs and attributes assigned to them.
+			1 - Key Pressed 1 time.
+			2 - Key Pressed 2 times.
+			4 - Key Pressed 3 times.
+			8 - Key Pressed 4 times.
+			16 - Key Pressed 5 times.
+			32 - Key Held Down.
+			64 - Key Released.
+			Note: Values of parameter 1 may be combined, e.g. 1+2=3 means that scenes will be sent after pressing the button once or twice.
+			Default: 127 All.
+			</Help>
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="3" label="Associations in Z-Wave network security mode"  min="0" max="7" value="7" >
+			<Help>
+			This parameter defines how commands are sent in specified association groups: as secure or non-secure. 
+			Parameter is active only in Z-Wave network security mode. It does not apply to 1st Lifeline group.
+			1 - 2nd group sent as secure.
+			2 - 3rd group sent as secure.
+			4 - 4th group sent as secure.
+			Default: 3 All.
+			</Help>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="10" label="Key Pressed 1 time – command sent to 2nd association group" value="3" size="1">
+			<Help>This parameter defines commands sent to devices associated in 2nd association group after a single click</Help>
+			<Item label="No action" value="0" />
+			<Item label="Switch ON" value="1" />
+			<Item label="Switch OFF" value="1" />
+			<Item label="Switch ON/OFF - alternately" value="3" />
+		</Value>
+		<Value type="short" genre="config" instance="1" index="11" label="Key Pressed 1 times – value of SWITCH ON command sent to 2nd association group" min="1" max="255" value="255">
+			<Help>This parameter defines value of SWITCH ON command sent to devices in 2nd association group after a single click.</Help>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="12" label="Key Pressed 2 time – command sent to 2nd association group" value="1" size="1">
+			<Help>This parameter defines commands sent to devices associated in 2nd association group after a double click</Help>
+			<Item label="No action" value="0" />
+			<Item label="Switch ON" value="1" />
+			<Item label="Switch OFF" value="1" />
+			<Item label="Switch ON/OFF - alternately" value="3" />
+		</Value>
+		<Value type="short" genre="config" instance="1" index="13" label="Key Pressed 2 times – value of SWITCH ON command sent to 2nd association group" min="1" max="255" value="99">
+			<Help>This parameter defines value of SWITCH ON command sent to devices in 2nd association group after a double click.</Help>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="14" label="Key Pressed 3 time – command sent to 2nd association group" value="0" size="1">
+			<Help>This parameter defines commands sent to devices associated in 2nd association group after a triple click</Help>
+			<Item label="No action" value="0" />
+			<Item label="Switch ON" value="1" />
+			<Item label="Switch OFF" value="1" />
+			<Item label="Switch ON/OFF - alternately" value="3" />
+		</Value>
+		<Value type="short" genre="config" instance="1" index="15" label="Key Pressed 3 times – value of SWITCH ON command sent to 2nd association group" min="1" max="255" value="255">
+			<Help>This parameter defines value of SWITCH ON command sent to devices in 2nd association group after a triple click.</Help>
+		</Value>		
+		<Value type="list" genre="config" instance="1" index="20" label="Key Pressed 1 time – command sent to 3rd association group" value="3" size="1">
+			<Help>This parameter defines commands sent to devices associated in 2nd association group after a single click</Help>
+			<Item label="No action" value="0" />
+			<Item label="Switch ON" value="1" />
+			<Item label="Switch OFF" value="1" />
+			<Item label="Switch ON/OFF - alternately" value="3" />
+		</Value>
+		<Value type="short" genre="config" instance="1" index="21" label="Key Pressed 1 times – value of SWITCH ON command sent to 3rd association group" min="1" max="255" value="255">
+			<Help>This parameter defines value of SWITCH ON command sent to devices in 3rd association group after a single click.</Help>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="22" label="Key Pressed 2 time – command sent to 3rd association group" value="1" size="1">
+			<Help>This parameter defines commands sent to devices associated in 3rd association group after a double click</Help>
+			<Item label="No action" value="0" />
+			<Item label="Switch ON" value="1" />
+			<Item label="Switch OFF" value="1" />
+			<Item label="Switch ON/OFF - alternately" value="3" />
+		</Value>
+		<Value type="short" genre="config" instance="1" index="23" label="Key Pressed 2 times – value of SWITCH ON command sent to 3rd association group" min="1" max="255" value="99">
+			<Help>This parameter defines value of SWITCH ON command sent to devices in 3rd association group after a double click.</Help>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="24" label="Key Pressed 3 time – command sent to 3rd association group" value="0" size="1">
+			<Help>This parameter defines commands sent to devices associated in 3rd association group after a triple click</Help>
+			<Item label="No action" value="0" />
+			<Item label="Switch ON" value="1" />
+			<Item label="Switch OFF" value="1" />
+			<Item label="Switch ON/OFF - alternately" value="3" />
+		</Value>
+		<Value type="short" genre="config" instance="1" index="25" label="Key Pressed 3 times – value of SWITCH ON command sent to 3rd association group" min="1" max="255" value="255">
+			<Help>This parameter defines value of SWITCH ON command sent to devices in 3rd association group after a triple click.</Help>
+		</Value>		
+		<Value type="list" genre="config" instance="1" index="29" label=" Key Held Down – command sent to 3rd association group" value="3" size="1">
+			<Help>This parameter defines commands sent to devices associated in 3rd association group after holding the button down.</Help>
+			<Item label="No action" value="0" />
+			<Item label="Brightening" value="1" />
+			<Item label="Dimming" value="1" />
+			<Item label="Brightening/Dimming - alternately" value="3" />
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="30" label=" Alarm frame triggers" min="0" max="127" value="127">
+			<Help>
+			Parameter determines which actions result in sending alarm frames to 4th association group.
+			1 - Key Pressed 1 time.
+			2 - Key Pressed 2 times.
+			4 - Key Pressed 3 times.
+			8 - Key Pressed 4 times.
+			16 - Key Pressed 5 times.
+			32 - Key Held Down.
+			64 - Key Released.
+			Default: 127 All.
+			</Help>
+		</Value>		
+	</CommandClass>
+	<!-- Association Groups -->
+	<CommandClass id="133">
+		<Associations num_groups="4">
+			<Group index="1" max_associations="1" label="Lifeline" />
+			<Group index="2" max_associations="5" label="On/Off"/>
+			<Group index="3" max_associations="5" label="Dimmer"/>
+			<Group index="4" max_associations="5" label="Alarm"/>
+		</Associations>
+	</CommandClass>
+
+</Product>
